analyze/dependeciesStudies/test_includeManager.log
Traceback (most recent call last):
  File "/Users/riccardo/Sources/GitHub/hello.esp32/analyze/dependeciesStudies/test_includeManager.py", line 6, in <module>
    from includesMan_allInOne_2 import *
  File "/Users/riccardo/Sources/GitHub/hello.esp32/analyze/dependeciesStudies/includesMan_allInOne_2.py", line 372
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
